@@ -640,9 +640,13 @@ static apr_status_t save_job_props(md_reg_t *reg, md_job_t *job, apr_pool_t *p)
     apr_status_t rv;
     
     rv = md_store_load_json(store, MD_SG_STAGING, job->md->name, MD_FN_JOB, &jprops, p);
+    if (APR_STATUS_IS_ENOENT(rv)) {
+        jprops = md_json_create(p);
+        rv = APR_SUCCESS;
+    }
     if (APR_SUCCESS == rv) {
         md_json_setb(job->restart_processed, jprops, MD_KEY_PROCESSED, NULL);
-        md_json_setl(job->error_runs, jprops, MD_KEY_PROCESSED, NULL);
+        md_json_setl(job->error_runs, jprops, MD_KEY_ERRORS, NULL);
         rv = md_store_save_json(store, p, MD_SG_STAGING, job->md->name,
                                 MD_FN_JOB, jprops, 0);
     }
@@ -671,8 +675,9 @@ static apr_status_t check_job(md_watchdog *wd, md_job_t *job, apr_pool_t *ptemp)
     if (job->stalled) {
         /* Missing information, this will not change until configuration
          * is changed and server restarted */
-         rv = APR_INCOMPLETE;
-         goto out;
+        rv = APR_INCOMPLETE;
+        ++job->error_runs;
+        goto out;
     }
     else if (job->renewed) {
         assess_renewal(wd, job, ptemp);
@@ -723,7 +728,8 @@ static apr_status_t check_job(md_watchdog *wd, md_job_t *job, apr_pool_t *ptemp)
     
 out:
     if (error_runs != job->error_runs) {
-        save_job_props(wd->reg, job, ptemp);
+        apr_status_t rv2 = save_job_props(wd->reg, job, ptemp);
+        ap_log_error(APLOG_MARK, APLOG_TRACE1, rv2, wd->s, "%s: saving job props", job->md->name);
     }
 
     job->last_rv = rv;
