@@ -1,8 +1,11 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.1
 
-  *) mod_md: v1.0.2, fix staging reset when MDCertificateAgreemen was initially missing.
-     [Stefan Eissing]
+  *) mod_md: v1.0.3, fixed various bugs in persisting job properties, so that status is 
+     persisted accross child process changes and staging is reset on reloads. Changed 
+     MDCertificateAgreement url checks. As long as the CA reports that the account has 
+     an agreement, no further checking is done. Existing accounts need no changes when
+     a new agreement comes out. [Stefan Eissing]
 
   *) mod_watchdog: Correct some log messages.  [Rainer Jung]
 
